Fixing jumping header size on mobile

--- a/styles.css
+++ b/styles.css
@@ -119,11 +119,11 @@ body {
     left: 0;
     max-width: 100%;
     max-height: 100vh;
-    width:100%;
-    height:100%;
+    width:100vw;
+    height:100vh;
     position: fixed;
     z-index: -1;
-    object-fit: cover;
+    //object-fit: cover;
 }
 
 .home-header > .quote {
